2011-01-28 Kazuhiko
* support 'Paths of objects whose workflow history should be kept' and 'Paths of objects that should be kept' in Business Template definition.
* support more 'Removed but ...' and 'Modified but ...' cases in business template installation dialogue.

2011-01-13 nicolas.dumazet
* add portal types for Tools bundled in erp5_core: Notification Tool was missing

2010-12-28 nicolas.dumazet
* add test_tales_expression field to Predicate_view

2010-12-27 nicolas.dumazet
* Fix list method on portal_property_sheets view

2010-12-13 nicolas.dumazet
* Add Tool portal types for Tools added through ERP5Site.manage_addERP5Site

2010-12-07 arnaud.fontaine
* Add portal_property_sheets to the Tools.

2010-12-07 arnaud.fontaine
* Modify dynamic_class_generation_interaction_workflow to reset the dynamic modules when calling setTypePropertySheetList().
* Fix description of Constraints portal types for ZODB Property Sheets.

2010-12-06 nicolas.dumazet
* rename Synchronisation Tool to Synchronization Tool for consistency
* fix type classes on tool portal types

2010-12-01 arnaud.fontaine
* Add Property Type Validity Constraint portal type and its view for ZODB Property Sheets.

2010-11-30 arnaud.fontaine
* Add Transaction Quantity Value Validity Constraint portal type and its view for ZODB Property Sheets.

2010-11-30 arnaud.fontaine
* Add Transaction Quantity Value Feasability Constraint portal type and its view.

2010-11-30 arnaud.fontaine
* Add Trade Model Line Cell Consistency Constraint portal type and its view.

2010-11-30 arnaud.fontaine
* Add Resource Measures Consistency Constraint portal type and its view.

2010-11-30 arnaud.fontaine
* Add Accounting Transaction Balance Constraint portal type and its view.

2010-11-29 arnaud.fontaine
* Add TALES Constraint portal type and its view.

2010-11-29 arnaud.fontaine
* Add Category Related Acquired Membership Arity Constraint portal type and its view.

2010-11-29 arnaud.fontaine