@@ -50,7 +50,7 @@
         </item>
         <item>
             <key> <string>_body</string> </key>
-            <value> <string>getattr(state_change[\'object\'].getPortalObject().portal_types, \'Types Tool\').resetDynamicDocuments()\n
+            <value> <string>state_change[\'object\'].getPortalObject().portal_types.resetDynamicDocumentsOnceAtTransactionBoundary()\n
 </string> </value>
         </item>
         <item>
